# WeKit

./: .gitignore  AGENTS.md  README.md
.github/workflows/: ci.yml
app/: build.gradle.kts
app/src/main/rust/wekit-native/: Cargo.toml  build.rs
app/src/main/rust/wekit-native/include/: native_hook.h
app/src/main/rust/wekit-native/src/: lib.rs  native_hook.rs
contrib/wekit-read-receipts-server/: Cargo.toml  index.html
contrib/wekit-read-receipts-server/src/: main.rs
docs/: README.md  SUMMARY.md  configuration.md  cosmic-level-disclaimer.md  faq.md  installation.md  module-settings.md
docs/features/beautify/: apply-global-background.md  beautify-activity-transition-animation.md  beautify-view-press-effect.md  custom-message-bubbles.md
docs/features/chat/: README.md  add-to-aggregation-folder.md  aggregate-chats.md  ai-reply.md  anti-message-recall.md  chat-input-bar-enhancements.md  disable-pinned-chats-collapsing.md  display-group-member-roles.md  external-sharing-evolved.md  forward-favorite-voices.md  forward-voices.md  message-time-enhancements.md  monitor-group-member-operations.md  quick-revoke-and-edit.md  read-receipts.md  remove-limits-during-calls.md  virtual-voip-video.md
docs/features/contacts/: auto-remark-new-friends.md  custom-local-friend-avatars.md  limit-group-member-nickname-length.md  quick-open-moments.md
docs/features/debug/: copy-we-chat-debug-info.md  profile-memory.md
docs/features/home_screen_menu/: kill-host-process.md  module-settings.md
docs/features/miniapps/: eruda-console.md  skip-splash.md  (+5 more)
gradle/: libs.versions.toml
(+131 files in other folders)
